<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="genre">Genre</string>
    <string name="all">All</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="crime">Crime</string>
    <string name="history">History</string>
    <string name="fantasy">Fantasy</string>
    <string name="family">Family</string>
    <string name="drama">Drama</string>
    <string name="documentary">Documentary</string>
    <string name="comedy">Comedy</string>
    <string name="music">Music</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="tv_movie">TV Movie</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="western">Western</string>
    <string name="war">War</string>
    <string name="thriller">Thriller</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="_0">0</string>
    <string name="release_date">Release Date:</string>
    <string name="language">Language</string>
</resources>